UI :- Fix announcement card, overflow, no search placeholder (#7323)
* Fix announcement card, overflow, no search placeholder

* announcement badge left alignment as per task

* decrease opacity of noData in search filter

--- a/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/Shared/Badge.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/Shared/Badge.less
@@ -1,38 +1,39 @@
 @background: #fcf6fc;
 @border: #b02aac99;
 @text: #b02aac;
+@primary: #7147e8;
 
 .announcement-badge-container {
   position: absolute;
-  top: -11px;
-  left: 10px;
+  top: -12px;
+  left: 16px;
   background: @background;
   border-radius: 4px;
   border: 1px solid @border;
-  padding: 2px 8px;
+  padding: 0 8px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .announcement-badge {
-  width: 12px;
-  height: 12px;
+  width: 14px;
+  height: 14px;
   background: @background;
 }
 
 .announcement-content {
-  font-size: 10px;
+  font-size: 12px;
   margin-left: 5px;
   color: @text;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .task-badge {
   background: #f1edfd;
   border: 1px solid #c6b5f6;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.06);
-  border-radius: 2px;
-  color: @text;
+  border-radius: 4px;
+  color: @primary;
   font-size: 12px;
 }
